--- a/src/pages/Devices/Device/Device.css
+++ b/src/pages/Devices/Device/Device.css
@@ -15,7 +15,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  margin-bottom: -0.7rem;
+  /* margin-bottom: -0.7rem; */
 }
 
 #chk-visibility:checked ~ .icon-expand {
