--- a/src/pages/Devices/Device/SmartStrip/SmartStrip.css
+++ b/src/pages/Devices/Device/SmartStrip/SmartStrip.css
@@ -1,5 +1,5 @@
 /* =====================================================*/
-.form {
+.form-smart-strip {
   border-radius: 8px;
   width: 100%;
   height: 100%;
@@ -10,10 +10,7 @@
   justify-content: center;
   font-size: 1.2rem;
 }
-.form-enabled {
-  /* background-color: rgba(200, 239, 253, 0.317);
-  box-shadow: 5px 5px 25px 3px #888888; */
-}
+
 /* =====================================================*/
 
 .sensor {
