--- a/src/pages/Devices/AddDevice/AddDevice.css
+++ b/src/pages/Devices/AddDevice/AddDevice.css
@@ -14,11 +14,16 @@
     padding: 30px 20px 20px 20px;
     border-radius: 8px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   
   .Add-form-content {
     padding-left: 12%;
     padding-right: 12%;
+    width: 100%;
   }
   
   .Add-form-title {
@@ -27,6 +32,10 @@
     font-size: 24px;
     color: rgb(34, 34, 34);
     font-weight: 800;
+  }
+  .btn-add-device{
+    width: 50%;
+    justify-self: center;
   }
   
   label {
