--- a/src/pages/Devices/AddDevice/SubIR/SubIR.css
+++ b/src/pages/Devices/AddDevice/SubIR/SubIR.css
@@ -1,6 +1,13 @@
-.btn-apply {
+.btn-ir {
   width: 30%;
-  justify-self: flex-end;
+}
+.ir-align {
+  display: flex;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  border-radius: 0;
+  justify-content: space-around;
 }
 .ir-codes {
   width: 30%;
