--- a/src/pages/Devices/Device/SmartIR/SmartIR.css
+++ b/src/pages/Devices/Device/SmartIR/SmartIR.css
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   position: relative;
   overflow: hidden;
+  padding: 0.5rem 0;
 }
 .ir-buttons {
   padding: 0.7rem;
@@ -57,10 +58,6 @@
   height: 100%;
   background-color: white;
   transition: all 0.5s ease-in-out;
-}
-.btn-close:active {
-  box-shadow: none;
-  border: none;
 }
 .ok-menu {
   width: 10rem;
