--- a/src/pages/Devices/Device/Device.css
+++ b/src/pages/Devices/Device/Device.css
@@ -27,8 +27,10 @@
   margin-left: -0.5rem;
 }
 .device-img {
-  height: 80px;
-  width: 80px;
+  min-height: 40px;
+  max-height: 80px;
+  max-width: 80px;
+  min-width: 40px;
   margin: 0;
   padding: 0;
 }
@@ -41,6 +43,8 @@
   margin: 0;
   padding: 0;
   display: inline-block;
+  width: 8rem;
+  word-wrap: break-word;
 }
 .device-name * {
   margin: 0;
@@ -50,8 +54,9 @@
 .device-name h4 {
   font-size: 1rem;
   font-style: oblique;
-  width: 8rem;
-  word-wrap: break-word;
+}
+.device-name h3 {
+  font-size: 1.5rem;
 }
 .fav-icon {
   margin-top: 0.5rem;
