--- a/src/pages/Devices/Device/Device.css
+++ b/src/pages/Devices/Device/Device.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  position: relative;
   /* margin-bottom: -0.7rem; */
 }
 
@@ -65,6 +66,16 @@
 }
 .fav-icon:hover {
   cursor: pointer;
+}
+.icon-edit {
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  transition: all 0.2s ease-in-out;
+}
+.icon-edit:hover {
+  cursor: pointer;
+  color: blue;
 }
 .vertical-menu {
   margin: 0;
