--- a/src/pages/Devices/AddDevice/AddDevice.css
+++ b/src/pages/Devices/AddDevice/AddDevice.css
@@ -1,10 +1,10 @@
 .Add-form-container {
-  margin: 3rem auto;
+  margin: 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 90vh;
+  width: 100%;
+  min-height: 70vh;
   transition: all 0.4s ease-in-out;
 }
 
@@ -31,18 +31,13 @@
   margin-bottom: 1em;
   font-size: 24px;
   color: rgb(34, 34, 34);
-  font-weight: 800;
+  font-weight: 500;
 }
 .btn-add-device {
   width: 50%;
   justify-self: center;
 }
 
-label {
-  font-size: 14px;
-  font-weight: 600;
-  color: rgb(34, 34, 34);
-}
 @media (max-width: 500px) {
   .Auth-form-container {
     height: 80vh;
