--- a/src/pages/Devices/Device/SmartStrip/SmartStrip.css
+++ b/src/pages/Devices/Device/SmartStrip/SmartStrip.css
@@ -1,5 +1,5 @@
 /* =====================================================*/
-.form-smart-strip {
+.smart-strip {
   border-radius: 8px;
   width: 100%;
   height: 100%;
