--- a/src/pages/Scenes/AddSchedule/AddSchedule.css
+++ b/src/pages/Scenes/AddSchedule/AddSchedule.css
@@ -1,19 +1,32 @@
 .weekDays-selector input {
   display: none !important;
 }
-
+.weekDays-selector {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .weekDays-selector input[type='checkbox'] + label {
   display: inline-block;
   border-radius: 6px;
   background: #dddddd;
   height: 40px;
-  width: 30px;
+  width: 40px;
   margin-right: 3px;
   line-height: 40px;
   text-align: center;
   cursor: pointer;
 }
+.btn-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.btn-set-time-schedule {
+  width: 140px;
+}
 .weekDays-selector input[type='checkbox']:checked + label {
   background: #2ad705;
   color: #ffffff;
