--- a/src/Global.css
+++ b/src/Global.css
@@ -6,3 +6,65 @@ label {
 input {
   cursor: revert;
 }
+
+/* vertical menu*/
+.vertical-menu {
+  margin: 0;
+  position: relative;
+  background-color: transparent;
+}
+.vertical-menu-item {
+  display: none;
+  position: absolute;
+  left: -4rem;
+  margin: 0.3em 1em;
+  transition: all 0.5s;
+  z-index: 10;
+  text-align: left;
+}
+.label-sub-menu {
+  background-color: transparent;
+  max-height: 2rem;
+  margin-left: 0rem;
+  margin-right: -0.4rem;
+}
+.label-sub-menu:hover {
+  cursor: pointer;
+}
+.label-sub-menu img {
+  transition: all 0.5s;
+  padding: 0.6rem;
+}
+.label-sub-menu img:hover {
+  background-color: rgba(204, 204, 204, 0.429);
+  border-radius: 50%;
+}
+.checkbox-sub-menu:checked ~ .label-sub-menu img {
+  background-color: rgba(204, 204, 204, 0.629);
+  border-radius: 50%;
+}
+.vertical-menu ul {
+  position: relative;
+  top: 1rem;
+  right: 4.5em;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+  box-shadow: 2px 2px 25px 1px #888888;
+  background-color: white;
+  transition: all 0.4s ease-in-out;
+}
+.vertical-menu-item li {
+  list-style-type: none;
+  background-color: white;
+  width: 180px;
+  padding: 0.2rem 1rem;
+  font-size: 1.2rem;
+  border-bottom: 1px solid #ccc;
+  transition: all 0.4s ease-in-out;
+}
+
+.vertical-menu-item li:hover {
+  background-color: #ccc;
+  cursor: pointer;
+}
