--- a/src/pages/Devices/Device/SmartStrip/SmartStrip.css
+++ b/src/pages/Devices/Device/SmartStrip/SmartStrip.css
@@ -1,8 +1,7 @@
 /* =====================================================*/
 .smart-strip {
-  border-radius: 8px;
+  margin-bottom: 0.5rem;
   width: 100%;
-  height: 100%;
   background: transparent;
   display: flex;
   flex-direction: column;
