--- a/src/pages/Devices/Device/SmartDoorSensor/SmartDoorSensor.css
+++ b/src/pages/Devices/Device/SmartDoorSensor/SmartDoorSensor.css
@@ -1,4 +1,5 @@
 .smart-door-sensor {
+  position: relative;
   margin: 0.5rem 0;
   width: 100%;
   background: transparent;
@@ -7,6 +8,7 @@
   justify-content: center;
   flex-direction: column;
   min-height: 120px;
+  overflow: hidden;
 }
 .display-status {
   width: 100%;
@@ -39,4 +41,23 @@
 }
 .door-sensor-image-item img {
   height: 100%;
+}
+.switch-direction-btn {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 30px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.switch-direction-btn:hover {
+  background-color: #e7e7e78f;
+  cursor: pointer;
+}
+.switch-direction-btn:active {
+  background-color: #d8d8d8;
 }
