added battery level icon

--- a/src/Global.css
+++ b/src/Global.css
@@ -68,3 +68,25 @@ input {
   background-color: #ccc;
   cursor: pointer;
 }
+
+.battery-level-icon {
+  position: absolute;
+  bottom: 0rem;
+  left: 0.5rem;
+}
+.battery-icon-usb-powered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.battery-icon-usb-powered p {
+  display: flex;
+  margin: 0;
+  margin-left: 0.1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 0.1rem;
+  border: 1px solid black;
+  border-radius: 4px;
+  font-size: 0.5rem;
+}
