--- a/src/pages/Devices/Device/SmartAlarmSiren/SmartSirenAlarm.css
+++ b/src/pages/Devices/Device/SmartAlarmSiren/SmartSirenAlarm.css
@@ -7,6 +7,7 @@
   justify-content: center;
   min-height: 160px;
   margin: 0.3rem 0;
+  position: relative;
 }
 .siren-alarm-sensors {
   display: flex;
