--- a/src/pages/Scenes/Scene/Scene.css
+++ b/src/pages/Scenes/Scene/Scene.css
@@ -41,3 +41,15 @@
   left: 0.5rem;
   font-style: italic;
 }
+.scene-disabled-mask {
+  position: absolute;
+  top: 0rem;
+  left: 0rem;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: #ccc;
+  opacity: 40%;
+  border-radius: 7px;
+  cursor: not-allowed;
+}
