--- a/src/pages/Scenes/Scenes.css
+++ b/src/pages/Scenes/Scenes.css
@@ -10,8 +10,8 @@
 .scenes {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   min-height: 90vh;
   width: 100%;
