--- a/src/pages/Devices/Device/Device.css
+++ b/src/pages/Devices/Device/Device.css
@@ -1,7 +1,7 @@
 .device-item {
   width: 20rem;
   min-height: 6rem;
-  margin: 0.5rem 1rem;
+  margin: 0.6rem;
   position: relative;
   background-color: white;
   border-radius: 9px;
