--- a/src/pages/Scenes/Scene/Schedule/Schedule.css
+++ b/src/pages/Scenes/Scene/Schedule/Schedule.css
@@ -7,6 +7,7 @@
   position: relative;
   height: 160px;
   margin-top: 0.5rem;
+  overflow: hidden;
 }
 .schedule-top {
   width: 100%;
@@ -89,11 +90,12 @@
 .schedule-repeat p {
   font-size: 0.8rem;
   width: 45px;
-  height: 35px;
+  height: 30px;
   padding: 0.3rem;
   margin: 0.3rem;
   color: #ccc;
   border: 1px solid #ccc;
-  border-radius: 3px;
+  border-radius: 4px;
   text-align: center;
+  font-weight: 600;
 }
