--- a/src/pages/Devices/Device/SmartLed/SmartLed.css
+++ b/src/pages/Devices/Device/SmartLed/SmartLed.css
@@ -1,4 +1,4 @@
-.smart-bulb {
+.smart-led {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,4 +29,26 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+.palette {
+  /* margin-top: 1rem; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.palette-speed {
+  margin: 0;
+}
+.palette-buttons {
+  flex-direction: row;
+  align-items: center;
+  margin: 0;
+  justify-content: center;
+}
+.palette-buttons * {
+  margin: 0 0.3rem;
+}
+.palette-buttons *:hover {
+  cursor: pointer;
 }
