--- a/src/pages/Devices/Device/SmartLed/SmartLed.css
+++ b/src/pages/Devices/Device/SmartLed/SmartLed.css
@@ -30,20 +30,24 @@
   flex-direction: column;
   align-items: flex-start;
 }
-.palette {
-  /* margin-top: 1rem; */
+.pallete-controll-item {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  margin: 0;
+  margin-top: 0.3rem;
+}
+.palette-colors {
   align-items: center;
+  flex-direction: row;
 }
 .palette-speed {
-  margin: 0;
+  margin-top: -0.4rem;
 }
 .palette-buttons {
   flex-direction: row;
   align-items: center;
-  margin: 0;
   justify-content: center;
 }
 .palette-buttons * {
