--- a/src/pages/Scenes/AddScene/AddScene.css
+++ b/src/pages/Scenes/AddScene/AddScene.css
@@ -5,7 +5,7 @@
   width: 100%;
   min-height: 90vh;
   height: 100%;
-  background-color: #a7a7a78f;
+  background-color: #a7a7a78c;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,6 +21,7 @@
   padding: 1rem;
   border-radius: 6px;
   position: relative;
+  box-shadow: 3px 3px 14px 3px #bee2f7;
 }
 .add-scene-title {
   margin-bottom: 0.5rem;
