--- a/src/pages/Scenes/Scene/DeviceScene/DeviceScene.css
+++ b/src/pages/Scenes/Scene/DeviceScene/DeviceScene.css
@@ -31,7 +31,8 @@
   justify-content: center;
 }
 .device-scene-item img {
-  width: 60px;
+  max-width: 60px;
+  max-height: 70px;
 }
 .device-scene-item p {
   font-size: 1rem;
