--- a/src/pages/Scenes/Scene/Scene.css
+++ b/src/pages/Scenes/Scene/Scene.css
@@ -56,3 +56,11 @@
   border-radius: 7px;
   cursor: not-allowed;
 }
+.final-scene {
+  max-height: 180px;
+  transition: max-height 0.4s ease-in-out;
+  overflow: hidden;
+}
+.final-scene-hidden {
+  max-height: 0px;
+}
