--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -27,6 +27,12 @@
 }
 .current-weather-text-temp {
   font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+}
+.current-weather-celsius-icon {
+  width: 28px;
+  margin: 0;
 }
 .current-weather-text-loc {
   font-size: 1rem;
@@ -40,5 +46,25 @@
   }
   .current-weather-icon {
     width: 50px;
+  }
+  .current-weather-celsius-icon {
+    width: 25px;
+  }
+}
+@media (max-width: 568px) {
+  .current-weather {
+    margin-left: 1rem;
+  }
+  .current-weather-text-temp {
+    font-size: 1.1rem;
+  }
+  .current-weather-text-loc {
+    font-size: 0.8rem;
+  }
+  .current-weather-icon {
+    width: 50px;
+  }
+  .current-weather-celsius-icon {
+    width: 22px;
   }
 }
