--- a/src/components/DeviceComponents/Device/Device.css
+++ b/src/components/DeviceComponents/Device/Device.css
@@ -32,6 +32,10 @@
   padding: 0;
   user-select: none;
 }
+.device-img svg {
+  width: 100%;
+  height: 100%;
+}
 .device-info:hover,
 .device-img:hover,
 .icon-expand:hover {
@@ -63,22 +67,11 @@
   word-wrap: break-word;
 }
 .fav-icon {
-  margin-top: 0.5rem;
+  margin-top: 0.3rem;
   margin-left: 0.2rem;
-  transition: all 0.5s ease-in-out;
 }
 .fav-icon:hover {
   cursor: pointer;
-}
-.icon-edit {
-  position: absolute;
-  bottom: 0rem;
-  right: 0.5rem;
-  transition: all 0.2s ease-in-out;
-}
-.icon-edit:hover {
-  cursor: pointer;
-  color: var(--hover-color);
 }
 .device-date {
   position: absolute;
@@ -109,8 +102,8 @@
   font-size: 0.4rem;
 }
 .final-device {
-  max-height: 450px;
-  transition: max-height 0.6s ease-in-out;
+  max-height: 280px;
+  transition: max-height 0.5s ease-in-out;
   overflow: hidden;
 }
 .final-device-hidden {
