--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --bck-hover-color: linear-gradient(to right, #cbcbcba2, #f0f0f069);
   --box-shadow-default: 1px 1px 14px 1px #888888;
   --bck-page-default: rgb(227, 227, 227);
+  --custom-red: #e60b0b;
 }
 body {
   margin: 0;
