--- a/src/pages/ScenePages/AddScene/AddScene.css
+++ b/src/pages/ScenePages/AddScene/AddScene.css
@@ -2,6 +2,7 @@
   position: fixed;
   opacity: 1;
   visibility: visible;
+  overflow: hidden;
   top: 4.5rem;
   left: 0;
   width: 100%;
@@ -16,6 +17,8 @@
 .add-scene-container-hidden {
   opacity: 0;
   visibility: hidden;
+  width: 0;
+  height: 0;
 }
 .add-scene {
   display: flex;
@@ -31,7 +34,6 @@
   box-shadow: 3px 3px 14px 3px #bee2f7;
   overflow: hidden;
 }
-
 .add-scene-title {
   margin-bottom: 0.5rem;
 }
@@ -97,4 +99,9 @@
   margin-left: 0.2rem;
   font-size: 1rem;
   font-weight: bolder;
+}
+@media (max-width: 568px) {
+  .add-scene {
+    width: 95%;
+  }
 }
